# VpngateClient

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: creat_release.yml
VpngateClient/: VpngateClient.py  module_connectivity.py  module_firewall.py  module_translations.py  user_data_manager.py
cmd/: connect.go  list.go
pkg/exec/: run.go
pkg/vpn/: cache.go  client.go  list.go
test_data/: vpn_list.csv
